# FtaCoder

./: LICENSE  ReadMe.md  pyproject.toml
Source/Classifiers/: CountVectorizerDSChapters.pkl  CountVectorizerNonDSChapters.pkl  NaiveBayesClassifierDSChapters.pkl  NaiveBayesClassifierNonDSChapters.pkl
Source/FtaCoder/: FtaCoder.py
Source/FtaCoder/MappingTreaties/xml/: pta_53.xml
