[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FtaCoder_YOUR_USERNAME_HERE"
version = "0.0.1"
authors = [
  { name="Camilo Umana-Dajud", email="camilo@umana-dajud.com" },
]
description = "A package to automatically code FTAs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"